- AI: nova ACTION circular player:
    # parâmetro distância (raio)
    # anda linearmente até player.y e player.x - distancia
    # dá 3 voltas circulares
    # sorteia novo ponto para retornar, do lado oposto ao que veio
    # vai para o novo ponto e volta ao descanso
- EDITOR: permitir adicionar frames de teleport (está desabilitado pq era usado para outra coisa)






**********************************************************************
                           VERSION 1.1.2
**********************************************************************
- trocar gráficos da fase #5 do castelo
- trocar, onde possível, int por Uint8/Sint8 no código


**********************************************************************
                           VERSION 1.1.1
**********************************************************************
- poder definir cima/baixo/esquerda/direita na configuração
- configuração de botões deve ser aplicada somente ao sair do menu
- EDITOR: está quebrando na versão release
- ANDROID: transisão de tela (cima/baixo) está lenta
- hadouken deve ocupar todos os slots de tiro (sair só ele)
- adicionar checagem para número máximo de tiros dependendo da lista
    * se houver só tiros normais, usa do player
- se passar de 80% do pulo, largar o botão não deve interrompê-lo
- esquema de 80% para o pulo não funciona direito na água (não considera a gravidade diferente no cálculo dos 80%)
- criar novo tipo de objeto: cápsula chefe final. só apaqrece quando outras cápsulas forem derrotadas.
- não poder pular se estiver em push-back
- diminuir push-back quando atingido (ver bem quanto é no Megaman)
- está sendo atingido quando animação de hit ainda está aparecendo (mas piscar já parou, a animação está com tempo diferente, maior)

- não fazer Dynamite dar dash ao ser atingido, pois torna muito desequilibrada a luta
- projéteis do Shocker devem usar trajetória tipo senóide