@@ -535,10 +535,10 @@ enum e_game_flags {
 	FLAG_INFINITE_JUMP,
 	FLAG_ALLWEAPONS,
     FLAG_INFINITE_HP,
-    FLAG_PLAYER_ROCKBOT,
-    FLAG_PLAYER_BETABOT,
-    FLAG_PLAYER_CANDYBOT,
-    FLAG_PLAYER_KITTYBOT,
+    FLAG_PLAYER1,
+    FLAG_PLAYER2,
+    FLAG_PLAYER3,
+    FLAG_PLAYER4,
 	FLAG_COUNT
 };
 
