@@ -48,6 +48,7 @@ adicionar sistema de colisão que permite diagonais
 =========================================================================================================================================
 VERSION 2.0.0 BETA 1
 =========================================================================================================================================
+- mesmo quando já tem save, está ficando com o cursor em new game
 
 - mover gráficos de NPCs para drawLib, de modo a tornar mais fácil limpar a lista, etc
 - limpar gráficos de NPCs ao sair (já que agora é mapa com ponteiros)
@@ -99,18 +100,7 @@ TESTAR: - não está removendo charged shot ao terminar um estágio e começar u
 ##################################
              DONE
 ##################################
-- AI: move_to_point deve respeitar screen-lock para não deixar a tela
-    # se naquele ponto só tem blocos, não deve atravessar mesmo sendo fantasma
-- CRITICAL: garantir que teleport jamais passe reto. Se função que procura primeiro block falahar (>=RES_H) parar no meio da tela
-    # na fase do dragon, ao morrer nos espinhos logo no início já causa problema...
-    # no início do estágio usa: player1.set_teleport_minimal_y((min_y-3)*TILESIZE);
-    # ao morrer usar: min_y = loaded_stage.get_teleport_minimal_y_tile(85)*TILESIZE; // x = 70 + half a player width (30)
-    # e player1.set_teleport_minimal_y(min_y-3);
-- inimigo ao retornar do teleporte (tipo mummy), não está mostrando animação (special attack)
-- AI: criar jump-attack-up e jump-attack-ahead: no topo do pulo, dispara
-    # se já estiver no ar voando ou pulando, apenas atira (com animação jump_attack)
-- AI: adicionar nova action set animation REVERSE (do último ao primeiro frame)
-- correção de bug na animação reversa que ia para frame_n "-1"
+
 
 
 =========================================================================================================================================
