@@ -1166,17 +1166,17 @@ void game::quick_load_game()
         fio.read_save(game_save);
     }
 
-    currentStage = STAGE2;
+    currentStage = STAGE6;
     game_save.difficulty = DIFFICULTY_EASY;
     game_save.selected_player = PLAYER_2;
 
-    if (GAME_FLAGS[FLAG_PLAYER_ROCKBOT]) {
+    if (GAME_FLAGS[FLAG_PLAYER1]) {
         game_save.selected_player = PLAYER_1;
-    } else if (GAME_FLAGS[FLAG_PLAYER_BETABOT]) {
+    } else if (GAME_FLAGS[FLAG_PLAYER2]) {
         game_save.selected_player = PLAYER_2;
-    } else if (GAME_FLAGS[FLAG_PLAYER_CANDYBOT]) {
+    } else if (GAME_FLAGS[FLAG_PLAYER3]) {
         game_save.selected_player = PLAYER_3;
-    } else if (GAME_FLAGS[FLAG_PLAYER_KITTYBOT]) {
+    } else if (GAME_FLAGS[FLAG_PLAYER4]) {
         game_save.selected_player = PLAYER_4;
     }
 
